--- a/adminCons.html
+++ b/adminCons.html
@@ -129,19 +129,22 @@
 
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+
+            <tr class="infoRow">
                 <th class="infoCell">Tenant ID</th>
                 <th class="infoCell">Name</th>
                 <th class="infoCell">Label</th>
             </tr>
 
-            <tr>
+
+            <tr class="infoRow">
                 <td colspan="4">
                     <hr>
                 </td>
             </tr>
 
-            <tr>
+
+            <tr class="infoRow">
                 <td class="infoCell">9785</td>
                 <td class="infoCell">Evian</td>
                 <td class="infoCell">-</td>
@@ -151,7 +154,8 @@
                 </td>
             </tr>
 
-            <tr>
+
+            <tr class="infoRow">
                 <td class="infoCell">9785</td>
                 <td class="infoCell">Noodles</td>
                 <td class="infoCell">-</td>
@@ -161,7 +165,8 @@
                 </td>
             </tr>
 
-            <tr>
+
+            <tr class="infoRow">
                 <td class="infoCell">9785</td>
                 <td class="infoCell">Grapes</td>
                 <td class="infoCell">-</td>
@@ -171,7 +176,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td class="infoCell">9785</td>
                 <td class="infoCell">Fiji</td>
                 <td class="infoCell">Waiver</td>
@@ -181,7 +186,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td class="infoCell">9785</td>
                 <td class="infoCell">Caramel</td>
                 <td class="infoCell">-</td>
@@ -191,7 +196,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td class="infoCell">9785</td>
                 <td class="infoCell">Milk</td>
                 <td class="infoCell">Fee Imposed</td>
@@ -200,8 +205,7 @@
                     </ion-button>
                 </td>
             </tr>
-
-            <tr>
+            <tr class="infoRow">
                 <td class="infoCell">9785</td>
                 <td class="infoCell">Kiwi</td>
                 <td class="infoCell">-</td>
@@ -211,7 +215,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td class="infoCell">9785</td>
                 <td class="infoCell">Noodles</td>
                 <td class="infoCell">-</td>
@@ -221,7 +225,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td class="infoCell">9785</td>
                 <td class="infoCell">Noodles</td>
                 <td class="infoCell">-</td>
