--- a/adminDonor.html
+++ b/adminDonor.html
@@ -129,20 +129,20 @@
 
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+            <tr class="infoRow">
                 <th class="infoCell">ID</th>
                 <th class="infoCell">Donor</th>
                 <th class="infoCell">Item ID</th>
                 <th class="infoCell">Location</th>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td colspan="4">
                     <hr>
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">D9002</td>
                 <td class="infoCell">Tyler</td>
@@ -150,7 +150,7 @@
                 <td class="infoCell">U10102</td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">D9003</td>
                 <td class="infoCell">Daniel</td>
@@ -158,7 +158,7 @@
                 <td class="infoCell">U10103</td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">D9004</td>
                 <td class="infoCell">Anson</td>
@@ -166,7 +166,7 @@
                 <td class="infoCell">U10104</td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">D9005</td>
                 <td class="infoCell">Breta</td>
@@ -174,7 +174,7 @@
                 <td class="infoCell">U10105</td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">D9006</td>
                 <td class="infoCell">Noel</td>
@@ -182,7 +182,8 @@
                 <td class="infoCell">U10106</td>
             </tr>
 
-            <tr>
+
+            <tr class="infoRow">
 
                 <td class="infoCell">D9007</td>
                 <td class="infoCell">Matthew</td>
@@ -190,7 +191,8 @@
                 <td class="infoCell">U10107</td>
             </tr>
 
-            <tr>
+
+            <tr class="infoRow">
 
                 <td class="infoCell">D9008</td>
                 <td class="infoCell">Phoebe</td>
@@ -198,7 +200,8 @@
                 <td class="infoCell">U10108</td>
             </tr>
 
-            <tr>
+
+            <tr class="infoRow">
 
                 <td class="infoCell">D9009</td>
                 <td class="infoCell">Lorrie</td>
@@ -206,7 +209,8 @@
                 <td class="infoCell">U10109</td>
             </tr>
 
-            <tr>
+
+            <tr class="infoRow">
 
                 <td class="infoCell">D9010</td>
                 <td class="infoCell">Daisy</td>
