--- a/adminInv.html
+++ b/adminInv.html
@@ -128,20 +128,20 @@
 
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+            <tr class="infoRow">
                 <th class="infoCell">Serial</th>
                 <th class="infoCell">Donor</th>
                 <th class="infoCell">Item</th>
                 <th class="infoCell"></th>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td colspan="4">
                     <hr>
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0001</td>
                 <td class="infoCell">Jack</td>
@@ -152,7 +152,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0002</td>
                 <td class="infoCell">Ah Beng</td>
@@ -163,7 +163,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0003</td>
                 <td class="infoCell">Ah Long</td>
@@ -174,7 +174,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0003</td>
                 <td class="infoCell">Ah Huat</td>
@@ -185,7 +185,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0003</td>
                 <td class="infoCell">Ah Wee</td>
@@ -196,7 +196,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0003</td>
                 <td class="infoCell">Ah Kiat</td>
@@ -206,8 +206,7 @@
                     </ion-button>
                 </td>
             </tr>
-
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0003</td>
                 <td class="infoCell">Ah Tan</td>
@@ -218,7 +217,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0003</td>
                 <td class="infoCell">Ah Song</td>
@@ -229,8 +228,7 @@
                 </td>
             </tr>
 
-            <tr>
-
+            <tr class="infoRow">
                 <td class="infoCell">0003</td>
                 <td class="infoCell">Ah Liat</td>
                 <td class="infoCell">TV</td>
