--- a/adminModule.html
+++ b/adminModule.html
@@ -130,7 +130,7 @@
     
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+            <tr class="infoRow">
                 <th class="infoCell">ID</th>
                 <th class="infoCell">No. of Co-Tenant</th>
                 <th class="infoCell">Unit No.</th>
@@ -142,7 +142,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00001</td>
                 <td class="infoCell">3</td>
@@ -153,7 +153,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00002</td>
                 <td class="infoCell">4</td>
@@ -164,7 +164,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00003</td>
                 <td class="infoCell">2</td>
@@ -175,7 +175,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00004</td>
                 <td class="infoCell">2</td>
@@ -187,7 +187,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00005</td>
                 <td class="infoCell">2</td>
@@ -197,8 +197,7 @@
                     </ion-button>
                 </td>
             </tr>
-
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00006</td>
                 <td class="infoCell">2</td>
@@ -209,7 +208,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00007</td>
                 <td class="infoCell">5</td>
@@ -220,7 +219,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00008</td>
                 <td class="infoCell">2</td>
@@ -231,7 +230,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00009</td>
                 <td class="infoCell">2</td>
@@ -242,7 +241,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00010</td>
                 <td class="infoCell">2</td>
@@ -252,8 +251,7 @@
                     </ion-button>
                 </td>
             </tr>
-
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">TT00011</td>
                 <td class="infoCell">2</td>
