--- a/adminPayment.html
+++ b/adminPayment.html
@@ -129,7 +129,7 @@
 
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+            <tr class="infoRow">
                 <th class="infoCell">Payment ID</th>
                 <th class="infoCell">Amount</th>
                 <th class="infoCell">Deduction</th>
@@ -142,7 +142,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">$20.00</td>
@@ -153,7 +153,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">$15.00</td>
@@ -164,7 +164,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">$10.00</td>
@@ -175,7 +175,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">$20.00</td>
@@ -185,9 +185,7 @@
                     </ion-button>
                 </td>
             </tr>
-
-            <tr>
-
+            <tr class="infoRow">
                 <td class="infoCell">9735</td>
                 <td class="infoCell">$15.00</td>
                 <td class="infoCell">-$5.00</td>
@@ -197,7 +195,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">$10.00</td>
@@ -208,7 +206,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">NIL</td>
@@ -219,7 +217,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">$12.00</td>
@@ -230,7 +228,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">$5.00</td>
@@ -241,7 +239,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">$7.00</td>
@@ -252,7 +250,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">NIL</td>
