--- a/tenantInv.html
+++ b/tenantInv.html
@@ -129,20 +129,20 @@
 
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+            <tr class="infoRow">
                 <th class="infoCell">Serial</th>
                 <th class="infoCell">Donor</th>
                 <th class="infoCell">Item</th>
                 <th class="infoCell"></th>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td colspan="4">
                     <hr>
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0001</td>
                 <td class="infoCell">Jack</td>
@@ -153,7 +153,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0002</td>
                 <td class="infoCell">Ah Beng</td>
@@ -164,7 +164,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0003</td>
                 <td class="infoCell">Ah Long</td>
