--- a/adminUtility.html
+++ b/adminUtility.html
@@ -129,7 +129,7 @@
 
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+            <tr class="infoRow">
                 <th class="infoCell">Bill ID</th>
                 <th class="infoCell">Split</th>
                 <th class="infoCell">Comments</th>
@@ -142,7 +142,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">UB0157</td>
                 <td class="infoCell">2</td>
@@ -153,7 +153,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">UB0168</td>
                 <td class="infoCell">1</td>
@@ -164,7 +164,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">UB0170</td>
                 <td class="infoCell">2</td>
@@ -174,8 +174,7 @@
                     </ion-button>
                 </td>
             </tr>
-
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">UB0171</td>
                 <td class="infoCell">2</td>
@@ -185,8 +184,7 @@
                     </ion-button>
                 </td>
             </tr>
-
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">UB0173</td>
                 <td class="infoCell">2</td>
@@ -196,8 +194,7 @@
                     </ion-button>
                 </td>
             </tr>
-
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">UB0175</td>
                 <td class="infoCell">1</td>
@@ -208,7 +205,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">UB0176</td>
                 <td class="infoCell">1</td>
@@ -219,7 +216,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">UB0179</td>
                 <td class="infoCell">2</td>
@@ -229,8 +226,7 @@
                     </ion-button>
                 </td>
             </tr>
-
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">UB0180</td>
                 <td class="infoCell">1</td>
