--- a/donorModule.html
+++ b/donorModule.html
@@ -131,7 +131,7 @@
 
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+            <tr class="infoRow">
                 <th  class="infoCell" id="item_id">Serial</th>
                 <th  class="infoCell" id="item_name">Item</th>
                 <th  class="infoCell" id="item_loanout">Status</th>
@@ -144,32 +144,32 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td  class="infoCell" id="item_id">0001</td>
                 <td  class="infoCell" id="item_name">Spoon</td>
                 <td  class="infoCell" id="item_loanout">Loaned</td>
                 <td  class="infoCell" id="item_location">57890</td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td  class="infoCell" id="item_id">0001</td>
                 <td  class="infoCell" id="item_name">Carpet</td>
                 <td  class="infoCell" id="item_loanout">Loaned</td>
                 <td  class="infoCell" id="item_location">57890</td>
             </tr>
-            <tr>
+            <tr class="infoRow">
                 <td  class="infoCell" id="item_id">0001</td>
                 <td  class="infoCell" id="item_name">Curtain</td>
                 <td  class="infoCell" id="item_loanout">Loaned</td>
                 <td  class="infoCell" id="item_location">57890</td>
             </tr>
-            <tr>
+            <tr class="infoRow">
                 <td  class="infoCell" id="item_id">0001</td>
                 <td  class="infoCell" id="item_name">Mattress</td>
                 <td  class="infoCell" id="item_loanout">Available</td>
                 <td  class="infoCell" id="item_location">57890</td>
             </tr>
-            <tr>
+            <tr class="infoRow">
                 <td  class="infoCell" id="item_id">0001</td>
                 <td  class="infoCell" id="item_name">Fork</td>
                 <td  class="infoCell" id="item_loanout">Available</td>
