--- a/tenantCons.html
+++ b/tenantCons.html
@@ -129,7 +129,7 @@
 
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+            <tr class="infoRow">
                 <th class="infoCell">Item</th>
                 <th class="infoCell">Fees</th>
                 <th class="infoCell"></th>
@@ -141,7 +141,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td class="infoCell">Evian</td>
                 <td class="infoCell">$1.60</td>
                 <td class="infoButton">
@@ -150,7 +150,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">Item 1</td>
                 <td class="infoCell">Item 2</td>
