--- a/tenantFamily.html
+++ b/tenantFamily.html
@@ -65,37 +65,37 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -140,14 +140,32 @@
             </ion-item-divider>
             <ion-item>
                 <ion-label>Tenant Details</ion-label>
+                <ion-label>TT1234
+                    <td>
+                        <ion-button id="tenantHistory-btn" size="small" color="themetext">More
+                        </ion-button>
+                    </td>
+                </ion-label>
+
             </ion-item>
             <ion-item>
-                <ion-label>Name</ion-label>
-                <ion-label>Jack Tyler</ion-label>
+                <ion-label>Phone Number</ion-label>
+                <ion-label>9876 5432</ion-label>
             </ion-item>
             <ion-item>
-                <ion-label>ID</ion-label>
-                <ion-label>T123456</ion-label>
+                <ion-label>Citizenship</ion-label>
+                <ion-label>Singaporean</ion-label>
+            </ion-item>
+
+
+            <ion-item-divider>
+                <ion-label>
+                    <br>
+                </ion-label>
+            </ion-item-divider>
+
+            <ion-item>
+                <ion-label>Co-Tenant Details</ion-label> <ion-label>Zach Roe | T123456</ion-label>
             </ion-item>
             <ion-item>
                 <ion-label>Phone Number</ion-label>
@@ -165,15 +183,7 @@
             </ion-item-divider>
 
             <ion-item>
-                <ion-label>Co-Tenant Details</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Name</ion-label>
-                <ion-label>Zach Roe</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>ID</ion-label>
-                <ion-label>T123456</ion-label>
+                <ion-label>Co-Tenant Details</ion-label> <ion-label>Daniel Lo | T123456</ion-label>
             </ion-item>
             <ion-item>
                 <ion-label>Phone Number</ion-label>
@@ -191,41 +201,7 @@
             </ion-item-divider>
 
             <ion-item>
-                <ion-label>Co-Tenant Details</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Name</ion-label>
-                <ion-label>Daniel Lo</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>ID</ion-label>
-                <ion-label>T123456</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Phone Number</ion-label>
-                <ion-label>9876 5432</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Citizenship</ion-label>
-                <ion-label>Singaporean</ion-label>
-            </ion-item>
-
-            <ion-item-divider>
-                <ion-label>
-                    <br>
-                </ion-label>
-            </ion-item-divider>
-
-            <ion-item>
-                <ion-label>Co-Tenant Details</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Name</ion-label>
-                <ion-label>Corbyn Bi</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>ID</ion-label>
-                <ion-label>T123456</ion-label>
+                <ion-label>Co-Tenant Details</ion-label>  <ion-label>Corbyn Bi | T123456</ion-label>
             </ion-item>
             <ion-item>
                 <ion-label>Phone Number</ion-label>
