--- a/tenantPayment.html
+++ b/tenantPayment.html
@@ -129,20 +129,20 @@
 
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+            <tr class="infoRow">
                 <th class="infoCell">Payment ID</th>
                 <th class="infoCell">Amount</th>
                 <th class="infoCell">Deduction</th>
                 <th class="infoCell"></th>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
                 <td colspan="4">
                     <hr>
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">9735</td>
                 <td class="infoCell">$20.00</td>
@@ -153,7 +153,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">Item 1</td>
                 <td class="infoCell">Item 2</td>
