--- a/tenantUtility.html
+++ b/tenantUtility.html
@@ -130,7 +130,7 @@
 
     <ion-content class="ion-padding">
         <table class="infoTable">
-            <tr>
+            <tr class="infoRow">
                 <th class="infoCell">Bill ID</th>
                 <th class="infoCell">Split</th>
                 <th class="infoCell"></th>
@@ -142,7 +142,7 @@
                 </td>
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">1507</td>
                 <td class="infoCell">2</td>
@@ -153,7 +153,7 @@
                 
             </tr>
 
-            <tr>
+            <tr class="infoRow">
 
                 <td class="infoCell">0168</td>
                 <td class="infoCell">1</td>
