--- a/adminDonor.html
+++ b/adminDonor.html
@@ -112,11 +112,11 @@
 
 <div class="ion-page" id="main-content">
     <ion-header>
-        <ion-toolbar color="themetext">
+        <ion-toolbar color="white">
             <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
             </ion-buttons>
-            <ion-title class="pageTitle" slot="start">Donor</ion-title>
+            <ion-title class="pageTitle" slot="start" color="themetext">Donor</ion-title>
         </ion-toolbar>
     </ion-header>
 
