--- a/donorModule.html
+++ b/donorModule.html
@@ -115,11 +115,11 @@
 
 <div class="ion-page" id="main-content">
     <ion-header>
-        <ion-toolbar color="themetext">
+        <ion-toolbar color="white">
             <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
             </ion-buttons>
-            <ion-title class="pageTitle" slot="start">Items Donated</ion-title>
+            <ion-title class="pageTitle" slot="start" color="themetext">Items Donated</ion-title>
         </ion-toolbar>
     </ion-header>
 
