--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
 
   <form>
     <ion-item color="themewhite">
-      <ion-label position="floating">Phone number</ion-label>
-      <ion-input id="logPhone" type="text" maxlength="8" required></ion-input>
+      <ion-label position="floating">Username</ion-label>
+      <ion-input id="logUser" type="text" maxlength="24" required></ion-input>
     </ion-item>
 
     <ion-item color="themewhite">
@@ -21,7 +21,7 @@
       <ion-input
         id="logPass"
         type="password"
-        maxlength="21"
+        maxlength="24"
         required
       ></ion-input>
     </ion-item>
