--- a/adminUtility.html
+++ b/adminUtility.html
@@ -141,105 +141,8 @@
                     <hr>
                 </td>
             </tr>
-
-            <tr>
-
-                <td class="infoCell">UB0157</td>
-                <td class="infoCell">2</td>
-                <td class="infoCell">Waived</td>
-                <td class="infoButton">
-                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr>
-
-                <td class="infoCell">UB0168</td>
-                <td class="infoCell">1</td>
-                <td class="infoCell"></td>
-                <td class="infoButton">
-                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr>
-
-                <td class="infoCell">UB0170</td>
-                <td class="infoCell">2</td>
-                <td class="infoCell">Waived</td>
-                <td class="infoButton">
-                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr>
-
-                <td class="infoCell">UB0171</td>
-                <td class="infoCell">2</td>
-                <td class="infoCell">-</td>
-                <td class="infoButton">
-                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr>
-
-                <td class="infoCell">UB0173</td>
-                <td class="infoCell">2</td>
-                <td class="infoCell">-</td>
-                <td class="infoButton">
-                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr>
-
-                <td class="infoCell">UB0175</td>
-                <td class="infoCell">1</td>
-                <td class="infoCell">Waived</td>
-                <td class="infoButton">
-                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr>
-
-                <td class="infoCell">UB0176</td>
-                <td class="infoCell">1</td>
-                <td class="infoCell">Waived</td>
-                <td class="infoButton">
-                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr>
-
-                <td class="infoCell">UB0179</td>
-                <td class="infoCell">2</td>
-                <td class="infoCell">-</td>
-                <td class="infoButton">
-                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr>
-
-                <td class="infoCell">UB0180</td>
-                <td class="infoCell">1</td>
-                <td class="infoCell">Waived</td>
-                <td class="infoButton">
-                    <ion-button class="billAdminModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
+            <tbody id="adminUtilityTable"></tbody>
+            
 
         </table>
     </ion-content>
