--- a/adminInv.html
+++ b/adminInv.html
@@ -141,102 +141,9 @@
                 </td>
             </tr>
 
-            <tr class="infoRow">
+            <tbody id="adminInvTable"></tbody>
 
-                <td class="infoCell">0001</td>
-                <td class="infoCell">Jack</td>
-                <td class="infoCell">Spoon</td>
-                <td class="infoButton">
-                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">0002</td>
-                <td class="infoCell">Ah Beng</td>
-                <td class="infoCell">Carpet</td>
-                <td class="infoButton">
-                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">0003</td>
-                <td class="infoCell">Ah Long</td>
-                <td class="infoCell">Curtain</td>
-                <td class="infoButton">
-                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">0003</td>
-                <td class="infoCell">Ah Huat</td>
-                <td class="infoCell">Mattress</td>
-                <td class="infoButton">
-                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">0003</td>
-                <td class="infoCell">Ah Wee</td>
-                <td class="infoCell">Bed</td>
-                <td class="infoButton">
-                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">0003</td>
-                <td class="infoCell">Ah Kiat</td>
-                <td class="infoCell">Mirror</td>
-                <td class="infoButton">
-                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-            <tr class="infoRow">
-
-                <td class="infoCell">0003</td>
-                <td class="infoCell">Ah Tan</td>
-                <td class="infoCell">Table</td>
-                <td class="infoButton">
-                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">0003</td>
-                <td class="infoCell">Ah Song</td>
-                <td class="infoCell">Deco</td>
-                <td class="infoButton">
-                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-                <td class="infoCell">0003</td>
-                <td class="infoCell">Ah Liat</td>
-                <td class="infoCell">TV</td>
-                <td class="infoButton">
-                    <ion-button class="inv-admin-modal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
+            
 
         </table>
     </ion-content>
