--- a/eReceipt.html
+++ b/eReceipt.html
@@ -24,17 +24,16 @@
         <ion-row>
             <ion-col id="receiptLeftCol">
                 <div class="receiptText">Invoice</div>
-                <div id="Payment_id">Payment Bill</div>
-                <div class="receiptText">Name: </div>
-                <div id="tenant_ id">ID: </div>
+                <div id="receiptPaymentID">Payment Bill</div>
+                <div id="receiptTenantID">Tenant ID: </div>
             </ion-col>
         </ion-row>
 
         <ion-row>
             <ion-col></ion-col>
             <ion-col id="receiptRightCol">
-                <div id="Payment_id">Bill ID: 7268</div>
-                <div class="receiptText">Date: 29/02/2021</div>
+                <!--<div id="receiptBillID">Bill ID: 7268</div>
+                <div class="receiptText">Date: 29/02/2021</div>-->
             </ion-col>
         </ion-row>
 
@@ -50,7 +49,7 @@
                     <div id="receiptLeftCol">Amount Owe</div>
                 </ion-col>
                 <ion-col id="receiptRightCol">
-                    <div id="amount_owe">$220.00 </div>
+                    <div id="receiptAmtOwe">$220.00 </div>
                 </ion-col>
             </ion-row>
 
@@ -60,17 +59,17 @@
                     <div id="receiptLeftCol">Rental Deposit</div>
                 </ion-col>
                 <ion-col id="receiptRightCol">
-                    <div id="rental_deposit">$300.00 </div>
+                    <div id="receiptRentalDeposit">$300.00 </div>
                 </ion-col>
             </ion-row>
 
             <ion-row>
 
                 <ion-col>
-                    <div id="receiptLeftCol">Deposit</div>
+                    <div id="receiptLeftCol">Deposit Deduction</div>
                 </ion-col>
                 <ion-col id="receiptRightCol">
-                    <div id="deposit_deduction">- </div>
+                    <div id="receiptDepositDeduct"> - </div>
                 </ion-col>
             </ion-row>
 
@@ -80,7 +79,7 @@
                     <div id="receiptLeftCol">Negligence Charges</div>
                 </ion-col>
                 <ion-col id="receiptRightCol">
-                    <div id="negligence_charge">$0</div>
+                    <div id="receiptNegliCharge">$0</div>
                 </ion-col>
             </ion-row>
 
@@ -91,7 +90,7 @@
 
         <ion-item>
             <ion-label  id="receiptLeftCol">Total Charges</ion-label>
-            <ion-label id="receiptRightCol">$515.00</ion-label>
+            <ion-label id="receiptTotal">$515.00</ion-label>
         </ion-item>
     </ion-grid>
     </ion-content>
