--- a/tenantCons.html
+++ b/tenantCons.html
@@ -141,24 +141,7 @@
                 </td>
             </tr>
 
-            <tr class="infoRow">
-                <td class="infoCell">Evian</td>
-                <td class="infoCell">$1.60</td>
-                <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">Item 1</td>
-                <td class="infoCell">Item 2</td>
-                <td class="infoButton">
-                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
+            <tbody id="cwConsumablesTable"></tbody>
 
         </table>
     </ion-content>
