--- a/tenantFamily.html
+++ b/tenantFamily.html
@@ -126,25 +126,16 @@
         <ion-list>
             <ion-item>
                 <ion-label>Unit No.</ion-label>
-                <ion-label>04-789</ion-label>
+                <ion-label id="cwUnitNum">04-789</ion-label>
             </ion-item>
             <ion-item>
-                <ion-label>Tenant Details</ion-label>
-                <ion-label>TT1234
-                    <td>
-                        <ion-button id="tenantHistory-btn" size="small" color="themetext">More
-                        </ion-button>
-                    </td>
-                </ion-label>
+                <ion-label>Tenant ID</ion-label><ion-label></ion-label>
+                <ion-label id="cwTenantID">TT1234</ion-label>
+                <ion-label><td>
+                    <ion-button id="tenantHistory-btn" size="small" color="themetext">More
+                    </ion-button>
+                </td></ion-label>
 
-            </ion-item>
-            <ion-item>
-                <ion-label>Phone Number</ion-label>
-                <ion-label>9876 5432</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Citizenship</ion-label>
-                <ion-label>Singaporean</ion-label>
             </ion-item>
 
 
@@ -154,59 +145,8 @@
                 </ion-label>
             </ion-item-divider>
 
-            <ion-item>
-                <ion-label>Co-Tenant Details</ion-label> <ion-label>Zach Roe | T123456</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Phone Number</ion-label>
-                <ion-label>9876 5432</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Citizenship</ion-label>
-                <ion-label>Singaporean</ion-label>
-            </ion-item>
-
-            <ion-item-divider>
-                <ion-label>
-                    <br>
-                </ion-label>
-            </ion-item-divider>
-
-            <ion-item>
-                <ion-label>Co-Tenant Details</ion-label> <ion-label>Daniel Lo | T123456</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Phone Number</ion-label>
-                <ion-label>9876 5432</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Citizenship</ion-label>
-                <ion-label>Singaporean</ion-label>
-            </ion-item>
-
-            <ion-item-divider>
-                <ion-label>
-                    <br>
-                </ion-label>
-            </ion-item-divider>
-
-            <ion-item>
-                <ion-label>Co-Tenant Details</ion-label>  <ion-label>Corbyn Bi | T123456</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Phone Number</ion-label>
-                <ion-label>9876 5432</ion-label>
-            </ion-item>
-            <ion-item>
-                <ion-label>Citizenship</ion-label>
-                <ion-label>Singaporean</ion-label>
-            </ion-item>
-
-            <ion-item-divider>
-                <ion-label>
-                    <br>
-                </ion-label>
-            </ion-item-divider>
+        </ion-list>
+        <ion-list id="cwCotenantInfoList">       
         </ion-list>
 
     </ion-content>
