--- a/tenantInv.html
+++ b/tenantInv.html
@@ -142,38 +142,7 @@
                 </td>
             </tr>
 
-            <tr class="infoRow">
-
-                <td class="infoCell">0001</td>
-                <td class="infoCell">Jack</td>
-                <td class="infoCell">Spoon</td>
-                <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">0002</td>
-                <td class="infoCell">Ah Beng</td>
-                <td class="infoCell">Carpet</td>
-                <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">0003</td>
-                <td class="infoCell">Ah Long</td>
-                <td class="infoCell">Curtain</td>
-                <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
+            <tbody id="cwInventoryTable"></tbody>
 
         </table>
     </ion-content>
