--- a/tenantPayment.html
+++ b/tenantPayment.html
@@ -142,27 +142,9 @@
                 </td>
             </tr>
 
-            <tr class="infoRow">
+            <tbody id="cwPaymentTable"></tbody>
 
-                <td class="infoCell">9735</td>
-                <td class="infoCell">$20.00</td>
-                <td class="infoCell">-$5.00</td>
-                <td class="infoButton">
-                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">Item 1</td>
-                <td class="infoCell">Item 2</td>
-                <td class="infoCell">Item 3</td>
-                <td class="infoButton">
-                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
+            
 
         </table>
     </ion-content>
