--- a/tenantHistory.html
+++ b/tenantHistory.html
@@ -15,19 +15,19 @@
         <ion-list>
             <ion-item>
                 <ion-label>Tenant History ID</ion-label>
-                <ion-label>TH123</ion-label>
+                <ion-label id="cwHistID">TH123</ion-label>
             </ion-item>
             <ion-item>
                 <ion-label>Tenant History Update</ion-label>
-                <ion-label>29/02/2020</ion-label>
+                <ion-label id="cwHistDate">29/02/2020</ion-label>
             </ion-item>
             <ion-item>
                 <ion-label>Unit ID</ion-label>
-                <ion-label>UT1234</ion-label>
+                <ion-label id="cwHistUnitID">UT1234</ion-label>
             </ion-item>
             <ion-item>
                 <ion-label>No. of Co-Tenants</ion-label>
-                <ion-label>2</ion-label>
+                <ion-label id="cwHistNum">2</ion-label>
             </ion-item>
 
         </ion-list>
