--- a/tenantUtility.html
+++ b/tenantUtility.html
@@ -142,26 +142,9 @@
                 </td>
             </tr>
 
-            <tr class="infoRow">
+            <tbody id="cwUtilityModal"></tbody>
 
-                <td class="infoCell">1507</td>
-                <td class="infoCell">2</td>
-                <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-                
-            </tr>
-
-            <tr class="infoRow">
-
-                <td class="infoCell">0168</td>
-                <td class="infoCell">1</td>
-                <td class="infoButton">
-                    <ion-button class="billModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
+            
 
 
         </table>
