--- a/eReceipt.html
+++ b/eReceipt.html
@@ -90,7 +90,7 @@
 
         <ion-item>
             <ion-label  id="receiptLeftCol">Total Charges</ion-label>
-            <ion-label id="receiptTotal">$515.00</ion-label>
+            <ion-label  id="receiptRightCol"><ion-label id="receiptTotal">$515.00</ion-label></ion-label>
         </ion-item>
     </ion-grid>
     </ion-content>
