--- a/login.html
+++ b/login.html
@@ -31,7 +31,8 @@
         <div class="whitetext">Login</div>
       </ion-button>
     </div>
-    <div class="acc-btn">
+
+    <!--<div class="acc-btn">
       <ion-button id="dummy-btn" expand="block" color="themetext">
         <div class="whitetext">Log in as Case Worker</div>
       </ion-button>
@@ -53,6 +54,6 @@
       <ion-button id="dummy3-btn" expand="block" color="themetext">
         <div class="whitetext">See receipt</div>
       </ion-button>
-    </div>
+    </div>-->
   </form>
 </div>
