--- a/tenantCons.html
+++ b/tenantCons.html
@@ -6,7 +6,7 @@
                     <ion-col>
                         <ion-row>
                             <img id="menuLogo" src="./images/tent.png" alt="tent logo image">
-                            <ion-title class="userName">Davier</ion-title>
+                            <ion-title class="userName">Case worker</ion-title>
                         </ion-row>
                     </ion-col>
                 </ion-row>
